# CreativeEngineeringCourse

./: .gitignore  README.md
NorthernLights/: NorthernLights.ino  northern_lights_playground.ipynb
pico_buttons/: CMakeLists.txt  buttons.c  buttons.cpp
pico_oled/: CMakeLists.txt  pico_oled.cpp
pico_rtc_test/: CMakeLists.txt  rtc_test.c
pico_test/: CMakeLists.txt  test.c
sun_alarm/: CMakeLists.txt  pico_ws2811.pio  sun_alarm.cpp
